--- a/src/css/MoviePoster.css
+++ b/src/css/MoviePoster.css
@@ -1,4 +1,5 @@
 .moviePoster__img {
+  margin: 0 0.3rem;
   max-width: 18rem;
   border-radius: 0.3rem;
 }/*# sourceMappingURL=MoviePoster.css.map */
