--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,6 +7,7 @@
 @import "../components/banner/Banner.scss";
 @import "../components/movieRow/MovieRow.scss";
 @import "../components/moviePoster/MoviePoster.scss";
+@import "../components/footer/Footer.scss";
 
 
 
