--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@
 
 $body-font: "Poppins", sans-serif;
 $font-color: white;
-$background-color: black;
+$background-color: rgb(10, 10, 10);
 
 $font-size-title: 5.4rem;
 $font-size-big: 2.5rem;
