--- a/src/css/MovieRow.css
+++ b/src/css/MovieRow.css
@@ -1,3 +1,7 @@
+.movieRow__title {
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
+}
 .movieRow__row {
   display: flex;
 }/*# sourceMappingURL=MovieRow.css.map */
