--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
 body {
   font-family: "Poppins", sans-serif;
-  background-color: black;
+  background-color: rgb(10, 10, 10);
   color: white;
 }
 
@@ -18,6 +18,9 @@ li {
   color: white;
   cursor: pointer;
 }
+li:hover {
+  scale: 105%;
+}
 
 h1 {
   font-size: 2.5rem;
@@ -30,6 +33,10 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.grid {
+  display: grid;
 }
 
 .button {
