--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -2,10 +2,18 @@
   padding: 3rem 3.5rem;
 }
 .section--header {
-  padding: 1rem 3rem;
+  padding: 0rem 3rem;
 }
 @media screen and (max-width: 768px) {
   .section--header {
     padding: 0 1rem;
+  }
+}
+.section--rows {
+  padding: 1.3rem 3rem;
+}
+@media screen and (max-width: 768px) {
+  .section--rows {
+    padding: 1rem;
   }
 }/*# sourceMappingURL=layout.css.map */
