--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -19,6 +19,10 @@ ul {
 li {
     color: $font-color;
     cursor: pointer;
+
+    &:hover {
+        scale: 105%;
+    }
 }
 
 h1 {
@@ -33,6 +37,10 @@ h1 {
         justify-content: center;
         align-items: center;
     }
+}
+
+.grid {
+    display: grid;
 }
 
 .button {
