--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -2,10 +2,18 @@
     padding: 3rem 3.5rem; 
 
     &--header {
-        padding: 1rem 3rem;
+        padding: 0rem 3rem;
 
         @media screen and (max-width: 768px) {
             padding: 0 1rem;
+        }
+    }
+
+    &--rows {
+        padding: 1.3rem 3rem;
+
+        @media screen and (max-width: 768px) {
+            padding: 1rem;
         }
     }
 
