--- a/src/components/moviePoster/MoviePoster.scss
+++ b/src/components/moviePoster/MoviePoster.scss
@@ -3,6 +3,14 @@
     &__img {
         margin: 0 .3rem;
         max-width: 18rem;
+        width: 100%;
         border-radius: .3rem;
+
+        cursor: pointer;
+
+        &:hover {
+            scale: 107%;
+            transition: transform 450ms;
+        }
     }
 }
