--- a/src/css/MovieRow.css
+++ b/src/css/MovieRow.css
@@ -1,7 +1,38 @@
+.movieRow {
+  width: 100%;
+}
 .movieRow__title {
   margin-bottom: 1rem;
   margin-left: 0.5rem;
 }
 .movieRow__row {
   display: flex;
+  width: -moz-max-content;
+  width: max-content;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  transition: all 1s ease;
+  transform: translateX(0);
+}
+.movieRow__row::-webkit-scrollbar {
+  display: none;
+}
+.movieRow__wrapper {
+  position: relative;
+}
+.movieRow__arrow {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 3rem;
+  height: 100%;
+  background-color: rgba(22, 22, 22, 0.5);
+  cursor: pointer;
+  z-index: 999;
+}
+.movieRow__arrow.left {
+  left: 0;
+}
+.movieRow__arrow.right {
+  right: 0;
 }/*# sourceMappingURL=MovieRow.css.map */
