--- a/src/components/movieRow/MovieRow.scss
+++ b/src/components/movieRow/MovieRow.scss
@@ -26,12 +26,12 @@
 
     &__arrow {
         position: absolute;
-        top: 0;
+        top: 5rem;
         bottom: 0;
         width: 3rem;
-        height: 100%;
+        height: 3rem;
         
-        background-color: rgb(22, 22, 22, .5);
+        color: white;
         cursor: pointer;
         z-index: 999;
 
@@ -42,6 +42,11 @@
         &.right {
             right: 0;
         }
+    }
+
+    button {
+        border: none;
+        background: none;
     }
 
 }
