--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -18,6 +19,16 @@ input {
   font-size: 0.9rem;
 }
 
+a {
+  font-size: 0.9rem;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+a:hover {
+  scale: 105%;
+}
+
 ul {
   list-style: none;
   font-size: 0.9rem;
@@ -32,7 +43,11 @@ li:hover {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 5.4rem;
+}
+
+button {
+  font-size: 1.4rem;
 }
 
 .flex {
@@ -59,9 +74,52 @@ h1 {
   background-color: red;
   color: white;
 }
+@media screen and (max-width: 768px) {
+  .button {
+    padding: 0.3rem 0.8rem;
+  }
+}
 
+@media screen and (max-width: 1200px) {
+  h1 {
+    font-size: 4.8rem;
+  }
+  p {
+    font-size: 1rem;
+  }
+  button {
+    font-size: 1.3rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 4rem;
+  }
+  p {
+    font-size: 0.9rem;
+  }
+  button {
+    font-size: 1.1rem;
+  }
+}
+@media screen and (max-width: 576px) {
+  h1 {
+    font-size: 3rem;
+  }
+  p {
+    font-size: 0.8rem;
+  }
+  button {
+    font-size: 0.8rem;
+  }
+}
 .section {
   padding: 3rem 3.5rem;
+}
+@media screen and (max-width: 576px) {
+  .section {
+    padding: 1.5rem;
+  }
 }
 .section--header {
   padding: 0rem 3rem;
@@ -72,12 +130,121 @@ h1 {
   }
 }
 .section--rows {
-  padding: 1.3rem 3rem;
+  padding: 1.3rem 1rem 1.3rem 3rem;
 }
 @media screen and (max-width: 768px) {
   .section--rows {
     padding: 1rem;
+    padding-right: 0;
   }
+}
+
+.login {
+  background-image: url("../assets/login background.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+  width: 100vw;
+}
+.login__logo {
+  position: absolute;
+  width: 10rem;
+  top: 0.6rem;
+  left: 1.2rem;
+  cursor: pointer;
+}
+.login__form {
+  flex-direction: column;
+  max-width: 21rem;
+  width: 100%;
+  padding: 2.5rem;
+  border-radius: 0.3rem;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+.login__title {
+  margin-bottom: 1rem;
+}
+.login input {
+  padding: 0.7rem 1rem;
+  margin: 0.3rem 0;
+  border-radius: 0.2rem;
+  background-color: rgb(54, 54, 54);
+  color: rgb(224, 224, 224);
+  border: none;
+}
+.login__button-signin {
+  margin-top: 2rem;
+  font-size: 1rem;
+  background-color: red;
+  color: white;
+}
+.login__button-signup {
+  margin-top: 5rem;
+  text-align: start;
+  font-size: 0.9rem;
+  border: none;
+  background: none;
+  color: white;
+  cursor: pointer;
+}
+
+.register {
+  background-image: url("../assets/login background.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+  width: 100vw;
+}
+.register__logo {
+  position: absolute;
+  top: 0.6rem;
+  left: 1.2rem;
+  width: 10rem;
+  cursor: pointer;
+}
+.register__button-signin {
+  position: absolute;
+  top: 3rem;
+  right: 3rem;
+  font-size: 1rem;
+  background-color: red;
+  color: white;
+}
+.register__content {
+  max-width: 57rem;
+  width: 100%;
+  padding: 0 1rem;
+}
+.register__title {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.register__title h3 {
+  font-weight: 400;
+}
+.register__form {
+  flex-direction: column;
+  gap: 1rem;
+}
+.register__form input {
+  max-width: 70%;
+  width: 100%;
+  height: 2rem;
+  padding-left: 2rem;
+  font-size: 0.9rem;
+  border-radius: 0.2rem;
+  border: none;
+}
+.register__button-getstarted {
+  width: 35%;
+  height: 2.5rem;
+  margin-top: 1rem;
+  font-weight: 600;
+  border-radius: 0.2rem;
+  border: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
 }
 
 .header {
@@ -85,6 +252,7 @@ h1 {
   width: 100%;
   padding-top: 0;
   background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 255, 255, 0));
+  z-index: 999999;
 }
 .header .header__nav {
   display: flex;
@@ -203,7 +371,6 @@ h1 {
   height: 100vh;
 }
 .banner__title {
-  font-size: 5.4rem;
   max-width: 45rem;
 }
 .banner__description {
@@ -218,9 +385,6 @@ h1 {
   margin-left: 0.8rem;
   color: white;
   background-color: rgb(114, 114, 114);
-}
-.banner__btns button {
-  font-size: 1.4rem;
 }
 .banner__icons {
   margin-right: 0.5rem;
@@ -251,11 +415,11 @@ h1 {
 }
 .movieRow__arrow {
   position: absolute;
-  top: 0;
+  top: 5rem;
   bottom: 0;
   width: 3rem;
-  height: 100%;
-  background-color: rgba(22, 22, 22, 0.5);
+  height: 3rem;
+  color: white;
   cursor: pointer;
   z-index: 999;
 }
@@ -264,6 +428,10 @@ h1 {
 }
 .movieRow__arrow.right {
   right: 0;
+}
+.movieRow button {
+  border: none;
+  background: none;
 }
 
 .moviePoster__img {
@@ -296,13 +464,20 @@ h1 {
 }
 .footer__links {
   display: flex;
-  justify-content: center;
-  gap: 4rem;
+  gap: 3rem;
   flex-wrap: wrap;
 }
 .footer__links-row {
   width: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .footer__links p {
   margin: 1rem 0;
+}
+@media screen and (max-width: 768px) {
+  .footer__links {
+    gap: 1rem;
+  }
 }/*# sourceMappingURL=App.css.map */
