--- a/src/css/MovieRow.css
+++ b/src/css/MovieRow.css
@@ -22,11 +22,11 @@
 }
 .movieRow__arrow {
   position: absolute;
-  top: 0;
+  top: 5rem;
   bottom: 0;
   width: 3rem;
-  height: 100%;
-  background-color: rgba(22, 22, 22, 0.5);
+  height: 3rem;
+  color: white;
   cursor: pointer;
   z-index: 999;
 }
@@ -35,4 +35,8 @@
 }
 .movieRow__arrow.right {
   right: 0;
+}
+.movieRow button {
+  border: none;
+  background: none;
 }/*# sourceMappingURL=MovieRow.css.map */
