--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,7 @@
   width: 100%;
   padding-top: 0;
   background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 255, 255, 0));
+  z-index: 999999;
 }
 .header .header__nav {
   display: flex;
