--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,6 +1,11 @@
 .section {
   padding: 3rem 3.5rem;
 }
+@media screen and (max-width: 576px) {
+  .section {
+    padding: 1.5rem;
+  }
+}
 .section--header {
   padding: 0rem 3rem;
 }
@@ -10,10 +15,11 @@
   }
 }
 .section--rows {
-  padding: 1.3rem 3rem;
+  padding: 1.3rem 1rem 1.3rem 3rem;
 }
 @media screen and (max-width: 768px) {
   .section--rows {
     padding: 1rem;
+    padding-right: 0;
   }
 }/*# sourceMappingURL=layout.css.map */
