--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -10,6 +10,16 @@ input {
     font-size: $font-size-small;
 }
 
+a {
+    font-size: $font-size-small;
+    color: $font-color;
+    text-decoration: none;
+    cursor: pointer;
+    
+    &:hover {
+        scale: 105%;
+    }
+}
 
 ul {
     list-style: none;
@@ -26,7 +36,11 @@ li {
 }
 
 h1 {
-    font-size: $font-size-big;
+    font-size: $font-size-title;
+}
+
+button {
+    font-size: 1.4rem;
 }
 
 .flex {
@@ -46,6 +60,7 @@ h1 {
 .button {
     padding: .6rem 1.5rem;
     border-radius: .2rem;
+
     font-weight: $font-600;
     border: none;
     cursor: pointer;
@@ -53,5 +68,52 @@ h1 {
     &--login {
         background-color: red;
         color: white;
+    }
+
+    @media screen and (max-width: 768px) {
+        padding: .3rem .8rem;
+    }
+}
+
+
+@media screen and (max-width: 1200px) {
+    h1 {
+        font-size: 4.8rem
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    button {
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    p {
+        font-size: .9rem;
+    }
+
+    button {
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    p {
+        font-size: .8rem;
+    }
+
+    button {
+        font-size: .8rem;
     }
 }
