--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -35,7 +35,7 @@
     .header__mobile-toggle {
         position: relative;
         display: none;
-        margin: 0 1rem;
+        margin-left: .4rem;
 
         font-size: $font-size-small;
         color: white;
@@ -119,7 +119,17 @@
         border-radius: .3rem;
         cursor: pointer;
     }
+
+    .header__button-signin {
+        margin: 0 1rem;
+
+        @media screen and (max-width: 768px) {
+            margin: 0 .3rem;
+        }
+    }
+
 }
+
 
 /* hide serachbar */
 
