--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
 .login {
   background-image: url("../assets/login background.jpg");
   background-size: cover;
@@ -33,16 +34,10 @@
 }
 .login__button-signin {
   margin-top: 2rem;
-  font-size: 1rem;
-  background-color: red;
-  color: white;
+  font-size: 0.9rem;
 }
 .login__button-signup {
   margin-top: 5rem;
   text-align: start;
   font-size: 0.9rem;
-  border: none;
-  background: none;
-  color: white;
-  cursor: pointer;
 }/*# sourceMappingURL=Login.css.map */
