--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,9 @@
 @import "./variables.scss";
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: $body-font;
     background-color: $background-color;
@@ -58,20 +62,36 @@ button {
 }
 
 .button {
-    padding: .6rem 1.5rem;
+    padding: .5rem 1.4rem;
     border-radius: .2rem;
 
-    font-weight: $font-600;
     border: none;
     cursor: pointer;
 
-    &--login {
+    &--red {
+        padding: .5rem 1.4rem;
+        
+        font-size: $font-button;
+        border-radius: .2rem;
+        border: none;
         background-color: red;
         color: white;
+        cursor: pointer;
+    }
+
+    &--white {
+        font-size: $font-button;
+        background: none;
+        color: white;
+        border: none;
+        cursor: pointer;
     }
 
     @media screen and (max-width: 768px) {
-        padding: .3rem .8rem;
+        &, &--red, &--white {
+            padding: .25rem .65rem;
+            font-size: $font-size-tiny;
+        }
     }
 }
 
