--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,12 +4,14 @@ $body-font: "Poppins", sans-serif;
 $font-color: white;
 $background-color: rgb(10, 10, 10);
 
+$font-button: 1.1rem;
 $font-size-title: 5.4rem;
 $font-size-big: 2.5rem;
 $font-size-normall: 1.4rem;
 $font-size-small: .9rem;
 $font-size-tiny: .7rem;
 $font-600: 600;
+$font-400: 400;
 
 
 
