--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -14,11 +14,10 @@
     }
 
     &--rows {
-        padding: 1.3rem 1rem 1.3rem 3rem; 
+        margin: 1.3rem 3rem 1.3rem 3rem; 
 
         @media screen and (max-width: 768px) {
-            padding: 1rem;
-            padding-right: 0;
+            margin: 2rem;
         }
     }
 
