--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -14,6 +14,8 @@
         top: .6rem;
         left: 1.2rem;
 
+        pointer-events: all;
+        z-index: 10;
         cursor: pointer;
     }
 
@@ -51,6 +53,13 @@
 
         text-align: start;
         font-size: $font-size-small;
+    }
+
+    &__error {
+        color: red;
+        font-size: $font-size-small;
+
+        margin-bottom: .3rem;
     }
 }
 
