--- a/src/components/moviePoster/MoviePoster.scss
+++ b/src/components/moviePoster/MoviePoster.scss
@@ -1,16 +1,51 @@
-.moviePoster {
+@import "../../styles/variables.scss";
 
-    &__img {
-        margin: 0 .3rem;
-        max-width: 18rem;
-        width: 100%;
+.moviePoster {
+    position: relative;
+    width: 18rem;
+    margin: 0 .6rem;
+
+    transition: transform 0.2s ease;
+    
+    &:hover {
+        transform: scale(1.2);
+        z-index: 99;
+    }
+    
+    &__img { 
+        width: 18rem;
+        height: 100%;
         border-radius: .3rem;
 
-        cursor: pointer;
+        cursor: pointer;  
+    }
 
-        &:hover {
-            scale: 107%;
-            transition: transform 450ms;
+    &__information {
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        position: absolute;
+        bottom: 0rem;
+        width: 100%;
+        height: 65%;
+
+        padding: 0 1rem;
+        gap: .4rem;
+        background-color: rgb(0, 0, 0, .7);
+        border-radius: 0 0 .3rem .3rem;
+        z-index: 99;
+
+        .moviePoster__title {
+            font-size: $font-size-small;
+            font-weight: $font-600;
+        }
+
+        .moviePoster__date {
+            font-size: $font-size-tiny;
         }
     }
 }
+
+
+
