--- a/src/components/movieRow/MovieRow.scss
+++ b/src/components/movieRow/MovieRow.scss
@@ -1,33 +1,22 @@
 .movieRow {
-    width: 100%;
 
     &__title {
-        margin-bottom: 1rem;
         margin-left: .5rem;
+        margin-bottom: 1rem;
     }
 
     &__row {
-        display: flex;
-        width: max-content;
-        overflow-y: hidden;
-        overflow-x: scroll;
-
-        transition: all 1s ease;
-        transform: translateX(0);
-
+        height: 11.5rem;
+        
         &::-webkit-scrollbar {
             display: none;
         }
     }
-
-    &__wrapper {
-        position: relative;
-    }
-
+    
     &__arrow {
         position: absolute;
-        top: 5rem;
-        bottom: 0;
+        top: 4.5rem;
+        bottom: 0rem;
         width: 3rem;
         height: 3rem;
         
@@ -50,3 +39,4 @@
     }
 
 }
+
