--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -12,6 +13,10 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+html::-webkit-scrollbar {
+  display: none;
 }
 
 body {
@@ -53,6 +58,9 @@ h1 {
 
 button {
   font-size: 1.4rem;
+}
+button:hover {
+  scale: 105%;
 }
 
 .flex {
@@ -147,12 +155,11 @@ button {
   }
 }
 .section--rows {
-  padding: 1.3rem 1rem 1.3rem 3rem;
+  margin: 1.3rem 3rem 1.3rem 3rem;
 }
 @media screen and (max-width: 768px) {
   .section--rows {
-    padding: 1rem;
-    padding-right: 0;
+    margin: 2rem;
   }
 }
 
@@ -168,6 +175,8 @@ button {
   width: 10rem;
   top: 0.6rem;
   left: 1.2rem;
+  pointer-events: all;
+  z-index: 10;
   cursor: pointer;
 }
 .login__form {
@@ -197,6 +206,11 @@ button {
   margin-top: 5rem;
   text-align: start;
   font-size: 0.9rem;
+}
+.login__error {
+  color: red;
+  font-size: 0.9rem;
+  margin-bottom: 0.3rem;
 }
 
 .register {
@@ -357,6 +371,9 @@ button {
     margin: 0 0.3rem;
   }
 }
+.header__rightSide .header__button-logout {
+  margin: 0 1rem;
+}
 
 /* hide serachbar */
 .hideInput {
@@ -401,32 +418,20 @@ button {
   font-size: 2rem;
 }
 
-.movieRow {
-  width: 100%;
-}
 .movieRow__title {
-  margin-bottom: 1rem;
   margin-left: 0.5rem;
+  margin-bottom: 1rem;
 }
 .movieRow__row {
-  display: flex;
-  width: -moz-max-content;
-  width: max-content;
-  overflow-y: hidden;
-  overflow-x: scroll;
-  transition: all 1s ease;
-  transform: translateX(0);
+  height: 11.5rem;
 }
 .movieRow__row::-webkit-scrollbar {
   display: none;
 }
-.movieRow__wrapper {
-  position: relative;
-}
 .movieRow__arrow {
   position: absolute;
-  top: 5rem;
-  bottom: 0;
+  top: 4.5rem;
+  bottom: 0rem;
   width: 3rem;
   height: 3rem;
   color: white;
@@ -444,16 +449,43 @@ button {
   background: none;
 }
 
+.moviePoster {
+  position: relative;
+  width: 18rem;
+  margin: 0 0.6rem;
+  transition: transform 0.2s ease;
+}
+.moviePoster:hover {
+  transform: scale(1.2);
+  z-index: 99;
+}
 .moviePoster__img {
-  margin: 0 0.3rem;
-  max-width: 18rem;
-  width: 100%;
+  width: 18rem;
+  height: 100%;
   border-radius: 0.3rem;
   cursor: pointer;
 }
-.moviePoster__img:hover {
-  scale: 107%;
-  transition: transform 450ms;
+.moviePoster__information {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 0rem;
+  width: 100%;
+  height: 65%;
+  padding: 0 1rem;
+  gap: 0.4rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 0 0 0.3rem 0.3rem;
+  z-index: 99;
+}
+.moviePoster__information .moviePoster__title {
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+.moviePoster__information .moviePoster__date {
+  font-size: 0.7rem;
 }
 
 .footer {
