--- a/src/css/MovieRow.css
+++ b/src/css/MovieRow.css
@@ -1,29 +1,17 @@
-.movieRow {
-  width: 100%;
-}
 .movieRow__title {
-  margin-bottom: 1rem;
   margin-left: 0.5rem;
+  margin-bottom: 1rem;
 }
 .movieRow__row {
-  display: flex;
-  width: -moz-max-content;
-  width: max-content;
-  overflow-y: hidden;
-  overflow-x: scroll;
-  transition: all 1s ease;
-  transform: translateX(0);
+  height: 11.5rem;
 }
 .movieRow__row::-webkit-scrollbar {
   display: none;
 }
-.movieRow__wrapper {
-  position: relative;
-}
 .movieRow__arrow {
   position: absolute;
-  top: 5rem;
-  bottom: 0;
+  top: 4.5rem;
+  bottom: 0rem;
   width: 3rem;
   height: 3rem;
   color: white;
